SERVER-14900 Record post-execution CurOp metrics on mongoS